spec/invalid/undefined_identifier.expr.interpreted
[
    (
        CompileError(
            Undefined(
                "a",
            ),
        ),
        0..1,
    ),
]